better wad3 loader with unloading wad

--- a/psp/MakefileOld
+++ b/psp/MakefileOld
@@ -94,6 +94,7 @@ COMMON_OBJS = \
 # Object files used only under hardware video.
 VIDEO_OBJS = \
 	$(OBJ_DIR)/psp/clipping.o \
+	$(OBJ_DIR)/psp/wad3.o \
 	$(OBJ_DIR)/psp/video_hardware.o \
 	$(OBJ_DIR)/psp/video_hardware_hlmdl.o \
 	$(OBJ_DIR)/psp/video_hardware_draw.o \
