--- a/psp/Makefile
+++ b/psp/Makefile
@@ -119,7 +119,7 @@ VIDEO_FLAGS = -DPSP_HARDWARE_VIDEO
 OBJS	= $(VIDEO_OBJS) $(COMMON_OBJS) $(GPROF_OBJS)
 
 # Compiler flags.
-CFLAGS	= -ffast-math -O3 -G0 $(GPROF_FLAGS) -Wall -Wno-trigraphs -Winline -DPSP $(VIDEO_FLAGS) -g -DUSE_PR2 -DADQ_CUSTOM
+CFLAGS	= -ffast-math -O3 -G0 $(GPROF_FLAGS) -Wall -Wno-trigraphs -Winline -DPSP $(VIDEO_FLAGS) -g -DUSE_PR2 -DADQ_CUSTOM -DPSP_VFPU
 
 # Libs.
 IMG_LIBS    = -ljpeg -lpng -lz
